# PlayRho

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  Changes.md  INSTALL.md  LICENSE.txt  README.md  _config.yml  appveyor.yml  index.md  premake4.lua
Benchmark/: BenchmarkMain.cpp  CMakeLists.txt  README.md  test.cpp
Box2D/: Box2D.hpp  CMakeLists.txt  Readme.txt
Box2D/Box2D/: Box2D.h  Box2D.hpp  CMakeLists.txt
Box2D/Collision/: AABB.cpp  AABB.hpp  BroadPhase.cpp  BroadPhase.hpp  Collision.cpp  Collision.hpp  ContactFeature.hpp  Distance.cpp  Distance.hpp  DistanceProxy.cpp  DistanceProxy.hpp  DynamicTree.cpp  DynamicTree.hpp  Manifold.cpp  Manifold.hpp  MassData.cpp  MassData.hpp  RayCastInput.hpp  RayCastOutput.cpp  RayCastOutput.hpp  SeparationFinder.cpp  ShapeSeparation.cpp  ShapeSeparation.hpp  Simplex.cpp  Simplex.hpp  TimeOfImpact.cpp  TimeOfImpact.hpp  WorldManifold.cpp  WorldManifold.hpp
Box2D/Common/: AllocatedArray.hpp  ArrayList.hpp  BlockAllocator.cpp  BlockAllocator.hpp  BoundedValue.hpp  CodeDumper.cpp  CodeDumper.hpp  Fixed.hpp  GrowableStack.hpp  InvalidArgument.hpp  Mat22.hpp  Mat33.hpp  Math.cpp  Math.hpp  Position.hpp  Range.hpp  RealNum.hpp  RealNum.hpp.in  Settings.cpp  Settings.hpp  Settings.hpp.in  Span.hpp  StackAllocator.cpp  StackAllocator.hpp  Sweep.hpp  Templates.hpp  Timer.cpp  Transformation.hpp  UnitVec2.cpp  UnitVec2.hpp  Units.hpp  Vec2.hpp  Vector2D.hpp  Vector3D.hpp  Velocity.hpp  VertexSet.hpp
Box2D/Documentation/: CollisionHandlng.md  Doxyfile  PhysicalUnits.md
Box2D/Dynamics/: Body.cpp  Body.hpp  BodyAtty.hpp  BodyDef.cpp  BodyDef.hpp  ContactAtty.hpp  Fixture.cpp  Fixture.hpp  FixtureAtty.hpp  FixtureDef.cpp  FixtureDef.hpp  FixtureProxy.hpp  Island.cpp  JointAtty.hpp  StepConf.cpp  StepConf.hpp  StepStats.hpp  World.cpp  World.hpp  WorldCallbacks.hpp  WorldDef.hpp
Box2D/HelloWorld/: HelloWorld.cpp
Box2D/Rope/: Rope.cpp  Rope.hpp
Box2D/Testbed/: CMakeLists.txt  README.md
Box2D/UnitTests/: .editorconfig  AABB.cpp  Angle.cpp  ArrayList.cpp  BlockAllocator.cpp  Body.cpp  BodyConstraint.cpp  BroadPhase.cpp  CMakeLists.txt  CircleShape.cpp  CollideShapes.cpp  Collision.cpp  Contact.cpp  ContactFeature.cpp  ContactFilter.cpp  ContactManager.cpp  ContactSolver.cpp  Distance.cpp  DistanceJoint.cpp  DistanceProxy.cpp  Dump.cpp  DynamicTree.cpp  Epsilon.cpp  Fixed.cpp  Fixed32.cpp  Fixture.cpp  FixtureProxy.cpp  FrictionJoint.cpp  IndexPair.cpp  Island.cpp  Joint.cpp  List.cpp  ListCustom.cpp  Manifold.cpp  MassData.cpp  Mat22.cpp  Mat33.cpp  Math.cpp  MouseJoint.cpp  PolygonShape.cpp  (+31 more)
Documentation/: .gitignore  CMakeLists.txt  CollisionHandlng.md  Doxyfile  Doxyfile.in  PhysicalUnits.md  README.md  StyleGuide.md  UserGuide.md  extra-words.dic
HelloWorld/: .clang-tidy  CMakeLists.txt  ExpectedOutput.txt  HelloWorld.cpp  README.md
PlayRho/: Box2D.hpp  CMakeLists.txt  Defines.hpp  Defines.hpp.in  PlayRho.hpp  PlayRhoConfig.cmake.in  README.md  UsePlayRho.cmake
PlayRho/Collision/: AABB.cpp  AABB.hpp  ClipList.hpp  Collision.cpp  Collision.hpp  ContactFeature.hpp  Distance.cpp  Distance.hpp  DistanceConf.cpp  DistanceConf.hpp  DistanceProxy.cpp  DistanceProxy.hpp  DynamicTree.cpp  DynamicTree.hpp  DynamicTreeData.cpp  DynamicTreeData.hpp  IndexPair.hpp  Manifold.cpp  Manifold.hpp  MassData.cpp  MassData.hpp  PointState.hpp  PointStates.cpp  PointStates.hpp  RayCastInput.hpp  RayCastOpcode.hpp  RayCastOutput.cpp  RayCastOutput.hpp  SeparationFinder.cpp  SeparationFinder.hpp  SeparationScenario.cpp  SeparationScenario.hpp  ShapeSeparation.cpp  ShapeSeparation.hpp  Simplex.cpp  Simplex.hpp  SimplexEdge.hpp  TimeOfImpact.cpp  TimeOfImpact.hpp  ToiConf.cpp  (+5 more)
PlayRho/Common/: Acceleration.hpp  AllocatedArray.hpp  ArrayAllocator.hpp  ArrayList.hpp  BlockAllocator.cpp  BlockAllocator.hpp  BoundedValue.hpp  CheckedValue.hpp  CodeDumper.cpp  CodeDumper.hpp  DynamicMemory.cpp  DynamicMemory.hpp  Finite.hpp  Fixed.hpp  FixedLimits.hpp  FixedMath.hpp  FlagGuard.hpp  GrowableStack.hpp  IndexingNamedType.hpp  Interval.hpp  Intervals.hpp  InvalidArgument.hpp  LengthError.hpp  Mat22.hpp  Mat33.hpp  Math.cpp  Math.hpp  Matrix.hpp  MemoryResource.cpp  MemoryResource.hpp  Negative.hpp  NonNegative.hpp  NonPositive.hpp  NonZero.hpp  Numbers.hpp  OptionalValue.hpp  PoolMemoryResource.cpp  PoolMemoryResource.hpp  Position.hpp  Positive.hpp  (+43 more)
PlayRho/Dynamics/: Body.cpp  Body.hpp  BodyAtty.hpp  BodyConf.cpp  BodyConf.hpp  BodyDef.cpp  BodyDef.hpp  BodyID.hpp  BodyType.hpp  ContactAtty.hpp  ContactImpulsesList.cpp  ContactImpulsesList.hpp  Filter.hpp  Fixture.cpp  Fixture.hpp  FixtureAtty.hpp  FixtureConf.cpp  FixtureConf.hpp  FixtureDef.cpp  FixtureDef.hpp  FixtureID.hpp  FixtureProxy.hpp  Island.cpp  Island.hpp  IslandStats.hpp  JointAtty.hpp  MovementConf.cpp  MovementConf.hpp  StepConf.cpp  StepConf.hpp  StepStats.cpp  StepStats.hpp  World.cpp  World.hpp  WorldAtty.cpp  WorldAtty.hpp  WorldBody.cpp  WorldBody.hpp  WorldCallbacks.cpp  WorldCallbacks.hpp  (+27 more)
PlayRho/Rope/: Rope.cpp  Rope.hpp
Testbed/: CMakeLists.txt  README.md  imgui.ini
Testbed/Framework/: DebugDraw.cpp  DebugDraw.hpp  Drawer.cpp  Drawer.hpp  DroidSansTtfData.h  ExtensionsForImgui.cpp  ExtensionsForImgui.hpp  Main.cpp  Main.cpp-updated  Profile.hpp  RenderGL3.cpp  RenderGL3.h  SilkscreenTtfData.h  Test.cpp  Test.hpp  TestEntry.cpp  (+7 more)
UnitTests/: AABB.cpp  AabbTreeWorld.cpp  Acceleration.cpp  Angle.cpp  ArrayAllocator.cpp  ArrayList.cpp  BaseShapeConf.cpp  BlockAllocator.cpp  Body.cpp  BodyConf.cpp  BodyConstraint.cpp  BodyID.cpp  BodyType.cpp  BoundedValue.cpp  BroadPhase.cpp  CMakeLists.txt  ChainShape.cpp  Checked.cpp  CheckedValue.cpp  CircleShape.cpp  CollideShapes.cpp  Compositor.cpp  ConstraintSolverConf.cpp  Contact.cpp  ContactFeature.cpp  ContactFilter.cpp  ContactImpulsesList.cpp  ContactSolver.cpp  DiskShape.cpp  Distance.cpp  DistanceJoint.cpp  DistanceProxy.cpp  Dump.cpp  DynamicMemory.cpp  DynamicTree.cpp  EdgeShape.cpp  Epsilon.cpp  Filter.cpp  Fixed.cpp  Fixture.cpp  (+86 more)
(+9087 files in other folders)
