find_package(Doxygen REQUIRED dot)

set(DOXYGEN_OUTPUT_DIRECTORY "API")
set(DOXYGEN_EXTRACT_PRIVATE NO)
set(DOXYGEN_EXTRACT_STATIC YES)
set(DOXYGEN_EXAMPLE_PATH "${CMAKE_SOURCE_DIR}/HelloWorld;${CMAKE_SOURCE_DIR}/UnitTests")
set(DOXYGEN_IMAGE_PATH "${CMAKE_SOURCE_DIR}/Documentation/images")
set(DOXYGEN_REFERENCED_BY_RELATION YES)
set(DOXYGEN_VERBATIM_HEADERS NO)
set(DOXYGEN_FULL_PATH_NAMES YES)
set(DOXYGEN_STRIP_FROM_PATH "${CMAKE_SOURCE_DIR}/")
set(DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_SOURCE_DIR}/Library/include")
set(DOXYGEN_SHOW_FILES YES)
set(DOXYGEN_HTML_TIMESTAMP YES)
set(DOXYGEN_GENERATE_TAGFILE "API/html/PlayRho.tag")
set(DOXYGEN_CLASS_DIAGRAMS YES)
set(DOXYGEN_TEMPLATE_RELATIONS YES)
set(DOXYGEN_DISABLE_INDEX YES)
set(DOXYGEN_GENERATE_TREEVIEW YES)
set(DOXYGEN_DOT_IMAGE_FORMAT svg)
set(DOXYGEN_INTERACTIVE_SVG YES)
set(DOXYGEN_CASE_SENSE_NAMES YES)
set(DOXYGEN_QUIET YES)
set(DOXYGEN_SORT_BRIEF_DOCS YES)
set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
set(DOXYGEN_FILE_PATTERNS "*.cpp;*.hpp")
set(DOXYGEN_ENABLE_PREPROCESSING YES)

if(PLAYRHO_ENABLE_BOOST_UNITS)
	set(DOXYGEN_PREDEFINED "PLAYRHO_USE_BOOST_UNITS")
endif()

doxygen_add_docs(Documentation
	"${CMAKE_SOURCE_DIR}/Library"
	ALL
	WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/Documentation"
	COMMENT "Generating API documentation with Doxygen"
)

if(PLAYRHO_INSTALL)
	include(GNUInstallDirs)
	install(DIRECTORY "${CMAKE_BINARY_DIR}/Documentation/API/html/"
		DESTINATION "${CMAKE_INSTALL_DOCDIR}/API"
		COMPONENT Documentation)
endif()
